@@ -1,5 +1,6 @@
 package com.spring.reference.service;
 
+import java.text.DecimalFormat;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
@@ -7,36 +8,40 @@ import org.springframework.stereotype.Service;
 @Service
 public class CurrencyConvertorService {
 
-    final double conversionFactor = 72.34;
+     static final double CONVERSION_FACTOR = 72.34;
 
     public Double convertCurrency(String from, String to, Double quantity){
-        double conversionFactor = 0.0;
         if(from.equalsIgnoreCase("USD") && to.equalsIgnoreCase("INR")){
-            conversionFactor = 72.34;
+           return getCurrencyRoundedTo2Digits(CONVERSION_FACTOR, quantity);
+        }else if(from.equalsIgnoreCase("INR") && to.equalsIgnoreCase("USD")){
+            return getCurrencyRoundedTo2Digits((1 / CONVERSION_FACTOR), quantity);
         }
 
-        return conversionFactor*quantity;
+        return -1.00;
+    }
+
+    private static double getCurrencyRoundedTo2Digits(double conversionFactor, Double quantity) {
+        double value = conversionFactor * quantity;
+
+        DecimalFormat df = new DecimalFormat("#.##");
+        return Double.parseDouble(df.format(value));
     }
 
     public List<Double> convertCurrencies(List<Double> currencies) {
 
-        List<Double> result =currencies.stream()
-                .map(currency -> currency*conversionFactor)
-                .collect(Collectors.toList());
-
-        return result;
+    return currencies.stream()
+        .map(currency -> getCurrencyRoundedTo2Digits(CONVERSION_FACTOR, currency))
+        .toList();
     }
 
     public Double convertCurrencyValue(Double value) {
-        return value*conversionFactor;
+        return getCurrencyRoundedTo2Digits(CONVERSION_FACTOR, value);
     }
 
     public List<Double> convertCurrenciesObject(List<Double> currencies) {
 
-        List<Double> result =currencies.stream()
-                .map(currency -> currency*conversionFactor)
-                .collect(Collectors.toList());
-
-        return result;
+    return currencies.stream()
+       .map(currency -> getCurrencyRoundedTo2Digits(CONVERSION_FACTOR, currency))
+       .toList();
     }
 }
